tests/fixtures/compile_errors/emit_without_call.fe
contract Bar:

  pub def test():
    emit something